<resources>
    <string name="app_name">ex03Views</string>
    <string name="name">Rami</string>
    <string name="description">Un diamante sin pulir</string>
    <string name="gender">Hembra</string>
    <string name="date">01–01–2021</string>
    <string name="gender_icon_description">Gender Icon</string>
    <string name="like_icon_description">Like Icon</string>
    <string name="cake_icon_description">Cake Icon</string>
    <string name="share_icon_description">Share Icon</string>
    <string name="dong_image_description">Dog Image</string>
    <string name="dogButton">DogViewEx01</string>
    <string name="movieButton">MovieViewEx02</string>
    <string name="BurgerButton">BurgerViewEx03</string>
    <string name="LodgingButton">LodgingViewEx04</string>
    <string name="download_text">Descargas</string>
    <string name="movie_name_text">Jungle Cruise</string>
    <string name="movie_pegi_text">12</string>
    <string name="movie_data_text">1.03 GB</string>
    <string name="movie_duration">2 h 9 min</string>
    <string name="burger_percertage_like">98 %</string>
    <string name="burger_time_text">20-30 min</string>
    <string name="burger_text">Burger It</string>
    <string name="burger_text_discount">-15%</string>
    <string name="title_lodging">Alojamiento</string>

    <!--Screen 2-->
    <string name="title_screen_1">AUDIO 21</string>
    <string name="empresa_text">Otros Salud y Belleza</string>
    <string name="email_text">Email no disponible</string>
    <string name="phone_text">983154285</string>
    <string name="web_text">https::/audio21.com/</string>
    <string name="data_text">Datos</string>
    <string name="offer_detail_favourite">Favorite icon</string>
    <string name="offer_detail_share">Share icon</string>

    <!--Screen 3-->
    <string name="title_screen3">5% de Descuento; 15%</string>
    <string name="discounts_text1">5% de descuento; 15%</string>
    <string name="discounts_text2">6% de descuento en libreria; 15% Papeleria</string>
    <string name="subtitle_text">Descuento</string>
</resources>