<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding">

    <ImageView
        android:id="@+id/dogimage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"
        android:contentDescription="@string/dong_image_description" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/name"
        android:textSize="@dimen/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/dogimage"
        app:layout_constraintTop_toBottomOf="@id/dogimage" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <ImageView
        android:id="@+id/icon_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:src="@drawable/ic_gender_female"
        app:layout_constraintStart_toStartOf="@id/text_description"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        android:contentDescription="@string/gender_icon_description" />

    <TextView
        android:layout_marginStart="@dimen/padding"
        android:id="@+id/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="@id/icon_gender"
        app:layout_constraintLeft_toRightOf="@+id/icon_gender" />

    <ImageView
        android:layout_marginStart="@dimen/margin_m"
        android:id="@+id/icon_cake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cake"
        app:layout_constraintBottom_toBottomOf="@id/icon_gender"
        app:layout_constraintLeft_toRightOf="@+id/text_gender"
        android:contentDescription="@string/cake_icon_description" />

    <TextView
        android:layout_marginStart="@dimen/padding"
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@id/icon_gender"
        app:layout_constraintLeft_toRightOf="@+id/icon_cake" />

    <ImageView
        android:id="@+id/icon_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@id/icon_gender"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/like_icon_description" />

    <ImageView
        android:layout_marginEnd="@dimen/margin_l"
        android:id="@+id/icon_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@id/icon_gender"
        app:layout_constraintRight_toLeftOf="@id/icon_favorite"
        android:contentDescription="@string/share_icon_description" />

</androidx.constraintlayout.widget.ConstraintLayout>