<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/action_dogEx01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dogButton"
        app:layout_constraintEnd_toEndOf="@id/action_movieEx02"
        app:layout_constraintStart_toStartOf="@id/action_movieEx02"
        app:layout_constraintBottom_toTopOf="@id/action_movieEx02"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/action_movieEx02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/action_burgerEx03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BurgerButton"
        app:layout_constraintEnd_toEndOf="@id/action_movieEx02"
        app:layout_constraintStart_toStartOf="@id/action_movieEx02"
        app:layout_constraintTop_toBottomOf="@id/action_movieEx02"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>