<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_burger"
        android:layout_width="match_parent"
        android:layout_height="@dimen/burger_image_height"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        style="@style/circle"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ic_burger_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:src="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="@+id/image_burger"
        app:layout_constraintTop_toBottomOf="@id/image_burger" />

    <TextView
        android:id="@+id/burger_percentage_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:text="@string/burger_percertage_like"
        app:layout_constraintBottom_toBottomOf="@id/ic_burger_like"
        app:layout_constraintStart_toEndOf="@id/ic_burger_like"
        app:layout_constraintTop_toTopOf="@id/ic_burger_like" />

    <TextView
        android:id="@+id/burger_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/burger_time_text"
        app:layout_constraintEnd_toEndOf="@id/image_burger"
        app:layout_constraintTop_toBottomOf="@id/image_burger" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_circle_fill_3"
        android:layout_width="@dimen/movie_circle_dimen"
        android:layout_height="@dimen/movie_circle_dimen"
        android:layout_marginRight="@dimen/padding"
        android:src="@drawable/ic_circle_fill"
        app:layout_constraintBottom_toBottomOf="@id/burger_time"
        app:layout_constraintEnd_toStartOf="@id/burger_time"
        app:layout_constraintTop_toTopOf="@id/burger_time" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ic_burger_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding"
        android:src="@drawable/ic_delivery"
        app:layout_constraintBottom_toBottomOf="@id/icon_circle_fill_3"
        app:layout_constraintEnd_toStartOf="@id/icon_circle_fill_3"
        app:layout_constraintTop_toTopOf="@id/icon_circle_fill_3" />

    <TextView
        android:id="@+id/burger_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burger_text"
        android:textColor="@color/white"
        android:textSize="@dimen/name"
        app:layout_constraintBottom_toBottomOf="@id/image_burger"
        app:layout_constraintEnd_toEndOf="@id/image_burger"
        app:layout_constraintStart_toStartOf="@id/image_burger"
        app:layout_constraintTop_toTopOf="@id/image_burger" />

    <TextView
        android:id="@+id/burger_text_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding"
        android:background="@color/orange"
        android:paddingLeft="@dimen/margin_m"
        android:paddingTop="@dimen/movie_circle_dimen"
        android:paddingRight="@dimen/margin_m"
        android:paddingBottom="@dimen/movie_circle_dimen"
        android:text="@string/burger_text_discount"
        android:textSize="@dimen/name"
        app:layout_constraintEnd_toEndOf="@id/image_burger"
        app:layout_constraintTop_toTopOf="@id/image_burger" />

</androidx.constraintlayout.widget.ConstraintLayout>