<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_discounts"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/title_screen3" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/spacing_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_library"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CornerSize50Percent" />

            <TextView
                android:id="@+id/subtitle_text"
                style="@style/subTitle_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_vertical"
                android:text="@string/subtitle_text"
                app:layout_constraintEnd_toEndOf="@id/image"
                app:layout_constraintStart_toStartOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_vertical"
                app:layout_constraintEnd_toEndOf="@id/subtitle_text"
                app:layout_constraintStart_toStartOf="@id/subtitle_text"
                app:layout_constraintTop_toBottomOf="@id/subtitle_text">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_vertical">

                    <TextView
                        android:id="@+id/discount"
                        style="@style/color_icon_cardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/discounts_text1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/email"
                        style="@style/color_icon_cardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_vertical"
                        android:text="@string/discounts_text2"
                        app:layout_constraintEnd_toEndOf="@id/discount"
                        app:layout_constraintStart_toStartOf="@id/discount"
                        app:layout_constraintTop_toBottomOf="@id/discount" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>